# Modeling

./: CMakeLists.txt
include/: state.hpp
src/: main.cpp
